bk_ida/gccida/c1/rtx_equal_for_field_assignment_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_equal_for_field_assignment_p/src/combine.c:8016:38: error: use of undeclared identifier 'machine_mode'
|| ( v4 = gen_lowpart_for_combine( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v3), x), !rtx_equal_p( v3, v4)) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_equal_for_field_assignment_p/src/combine.c:8016:53: error: expected expression
|| ( v4 = gen_lowpart_for_combine( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v3), x), !rtx_equal_p( v3, v4)) ) 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_equal_for_field_assignment_p/src/combine.c:8025:33: error: use of undeclared identifier 'machine_mode'
v6 = gen_lowpart_for_combine( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtx), y); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_equal_for_field_assignment_p/src/combine.c:8025:48: error: expected expression
v6 = gen_lowpart_for_combine( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtx), y); 
                                               ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_equal_for_field_assignment_p/src/obj/combine.o] Error 1
